<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="horizontal"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dishItemTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="115dp"
                android:layout_height="115dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:scaleType="fitXY"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:srcCompat="@drawable/not_found" />

            <TextView
                android:id="@+id/packsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/packageSection"
                card_view:layout_constraintEnd_toStartOf="@+id/dishImage"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/pack2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/packof2"
                card_view:layout_constraintBottom_toTopOf="@+id/pack6"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/packsTitle" />

            <TextView
                android:id="@+id/pack4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:text="@string/packof4"
                card_view:layout_constraintBaseline_toBaselineOf="@+id/pack2"
                card_view:layout_constraintStart_toEndOf="@+id/pack2" />

            <TextView
                android:id="@+id/pack6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/packof6"
                card_view:layout_constraintBottom_toTopOf="@+id/pack12"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/pack2" />

            <TextView
                android:id="@+id/pack8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/packof8"
                card_view:layout_constraintBaseline_toBaselineOf="@+id/pack6"
                card_view:layout_constraintStart_toEndOf="@+id/pack6" />

            <TextView
                android:id="@+id/pack12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/packof12"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/pack6"
                card_view:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="30dp">

            <TextView
                android:id="@+id/addDishAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/addDish"
                android:textAlignment="center"
                android:textColor="?android:attr/colorMultiSelectHighlight"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/moreInfoAction"
                android:layout_width="64dp"
                android:layout_height="18dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/moreInfo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                card_view:layout_constraintStart_toEndOf="@+id/addDishAction"
                card_view:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>